--- a/css/styles.css
+++ b/css/styles.css
@@ -112,22 +112,23 @@ body {
     padding: 0;
     margin: 0;
     /* background-color: var(--cl-color); */
+    transition-duration: 0.1s;
 
 }
 
 .line-div:hover > .commit-message {
     color: var(--comment-color);
-    transition-duration: 0.1s;
+    transition-duration: inherit;
 }
 
 .line-div:hover > .line-number {
     color: var(--fg-color);
-    transition-duration: 0.1s;
+    transition-duration: inherit;
 }
 
 .line-div:hover > .not-line {
     background-color: var(--cl-color);
-    transition-duration: 0.1s;
+    transition-duration: inherit;
 }
 
 .codeblock {
@@ -165,6 +166,7 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+    color: var(--comment-color);
 
 }
 
@@ -176,6 +178,6 @@ a, a:active, a:visited, a:focus {
 a:hover {
     text-decoration: underline;
     color: inherit;
-    transition-duration: 0.1s;
+    transition-duration: inherit;
 }
 
